[tool.poetry]
name = "task-tracker"
version = "0.1.0"
description = "A simple CLI application to manage tasks locally."
authors = [ "Nikolaos Mavromatis <nck.mavromatis@gmail.com>" ]
license = "GPL-3.0"
readme = "README.md"
packages = [ { include = "task_tracker" } ]
urls = { Homepage = "https://github.com/nikolaos-mavromatis/task-tracker" }

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.12.3"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
typer = "^0.12.3"
pandas = "^2.2.2"
black = "^24.4.2"
isort = "^5.13.2"
pytest = "^8.2.0"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
disable = "R0913"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
